# vibeml

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  debug_imports.py  mkdocs.yml  noxfile.py  pyproject.toml  setup.py
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/docs/research/: 2025-10-26_research-best-practices-for-creating-comprehensive.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
docs/concepts/: architecture.md  index.md
docs/get-started/: configuration.md  index.md  installation.md  quickstart.md
docs/how-to/: index.md
docs/internals/: index.md
docs/playbooks/: index.md
docs/reference/: index.md
docs/reference/api/: cloud.md  models.md
src/vibeml/: __init__.py  __main__.py  exceptions.py  models.py  server.py  tasks.py
src/vibeml/cloud/: __init__.py  cost_estimator.py
src/vibeml/config/: __init__.py  budget.py  credentials.py  preferences.py
src/vibeml/persistence/: __init__.py  jobs_repository.py
src/vibeml/scripts/: __init__.py  generator.py
src/vibeml/validation/: __init__.py  dataset_validator.py  model_validator.py  resource_validator.py
tests/: __init__.py  test_cloud.py  test_config.py  test_exceptions.py  test_main.py  test_models.py  test_persistence.py  test_server_skypilot.py  test_tasks.py  test_validation.py
